--- a/Dockerfile.before-systemd-removal
+++ b/Dockerfile.before-systemd-removal
@@ -1,16 +1,7 @@
-FROM       centos:centos7
+FROM       nickflix:base
 MAINTAINER Snappy Nachos <technick@gmail.com>
 
-ENV container="docker" \
-    TERM="xterm" \
-    LANG="en_US.UTF-8"
-
-RUN yum -y update && \
-    yum -y install initscripts libselinux-utils-2.5-6.el7.x86_64 vim wget epel-release less git && \
-    yum -y install supervisor && \
-    yum clean all
-
-RUN rpm -Uvh https://downloads.plex.tv/plex-media-server/1.3.2.3112-1751929/plexmediaserver-1.3.2.3112-1751929.x86_64.rpm
+RUN rpm -iUvh /root/plexmediaserver-1.3.2.3112-1751929.x86_64.rpm
 
 ADD PlexMediaServer /etc/sysconfig/PlexMediaServer
 ADD BlankPreferences.xml /tmp/BlankPreferences.xml
