--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,22 +7,13 @@ services:
          - 32400:32400
          - 32469:32469
        volumes:
-         - /volume:/media:ro
-         - /volume/docker/nickflix/config:/config
-       environment:
-###         - disableRemoteSecurity=0
-###         - ManualPortMappingMode=1
-###         - AcceptedEULA=1
-###         - PublishServerOnPlexOnlineKey=1
-         - disableRemoteSecurity
-         - ManualPortMappingMode
-         - AcceptedEULA
-         - PublishServerOnPlexOnlineKey
+         - ${MEDIASRC}:${MEDIADST}:ro
+         - ${PLEXCONFIGSRC}:${PLEXCONFIGDST}
     plexpy:
        image: linuxserver/plexpy
        restart: unless-stopped
        ports:
          - 8181:8181
        volumes:
-         - /volume/docker/nickflix/config:/logs:ro
-         - /volume/docker/nickflix/plexpy:/config
+         - ${PLEXPYCONFIGSRC}:${PLEXPYCONFIGDST}
+         - ${PLEXPYLOGSRC}:${PLEXPYLOGDST}:ro
